--- a/home.html
+++ b/home.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/b57a0b7ac6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
   </head>
 
   <body>
     <div class="container">
+      <!-- header all -->
+
       <header class="header-distributed">
+        <!-- left side of header 35% -->
         <header class="header-left"></header>
 
+        <!-- center side of header 30% -->
         <header class="header-center">
           <header class="header-logo">
             <img
@@ -23,9 +31,12 @@
           </header>
         </header>
 
+        <!-- 
+        right side of header 35% -->
         <header class="header-right"></header>
       </header>
 
+      <!-- navigation -->
       <nav class="navigation">
         <ul>
           <li><a class="active" href="home.html">Home</a></li>
@@ -39,6 +50,7 @@
       </nav>
       <!-- navigation -->
 
+      <!-- slider -->
       <section class="slider">
         <img
           src="assets/images/placeholder.png"
@@ -148,13 +160,17 @@
         </section>
       </section>
 
+      <!-- footer -->
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
+          <!-- left side of footer 30% -->
           <footer class="footer-left">
             <h1>
               “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
             </h1>
           </footer>
+
+          <!-- center side of footer 40% -->
           <footer class="footer-center">
             <h1>LINKS</h1>
             <ul>
@@ -163,6 +179,7 @@
               <li><a href="https://vbag.nl/">VBAG</a></li>
             </ul>
           </footer>
+          <!-- right side of footer 30% -->
           <footer class="footer-right">
             <h1>DE PRAKTIJK</h1>
             <span>
@@ -183,6 +200,8 @@
             </p>
           </footer>
         </footer>
+
+        <!-- footer copyright -->
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
