--- a/home.html
+++ b/home.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script
-      src="https://kit.fontawesome.com/b57a0b7ac6.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b57a0b7ac6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
 </head>
@@ -26,9 +23,9 @@
 
             <header class="header-right">
                 <class class="icons">
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-twitter"></i>
-                    <i class="fa fa-linkedin"></i>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
                     <i class="fab fa-youtube"></i>
                 </class>
             </header>
@@ -135,53 +132,52 @@
             </section>
         </section>
 
-      <!-- footer -->
-      <footer class="footer-distributed">
-        <footer class="footer-distributed-position">
-          <!-- left side of footer 30% -->
-          <footer class="footer-left">
-            <h1>
-              “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-            </h1>
-          </footer>
+        <!-- footer -->
+        <footer class="footer-distributed">
+            <footer class="footer-distributed-position">
+                <!-- left side of footer 30% -->
+                <footer class="footer-left">
+                    <h1>
+                        “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+                    </h1>
+                </footer>
 
-          <!-- center side of footer 40% -->
-          <footer class="footer-center">
-            <h1>LINKS</h1>
-            <ul>
-              <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
-              <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
-              <li><a href="https://vbag.nl/">VBAG</a></li>
-            </ul>
-          </footer>
-          <!-- right side of footer 30% -->
-          <footer class="footer-right">
-            <h1>DE PRAKTIJK</h1>
-            <span>
+                <!-- center side of footer 40% -->
+                <footer class="footer-center">
+                    <h1>LINKS</h1>
+                    <ul>
+                        <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
+                        <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
+                        <li><a href="https://vbag.nl/">VBAG</a></li>
+                    </ul>
+                </footer>
+                <!-- right side of footer 30% -->
+                <footer class="footer-right">
+                    <h1>DE PRAKTIJK</h1>
+                    <span>
               <p>Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag</p>
               <p>Telefoon: 070-2202009</p>
               <p>E-mail: info@kinderbalans.nl</p>
               <p>Bel of mail vrijblijvend voor meer informatie!</p>
               <span>De openingstijden zijn:</span>
-            </span>
-            <p>
-              &nbsp;
-            </p>
-            <p>
-              <span
-                >Woensdag:<span><span>08:00-18:00</span></span>
-              </span>
-              <span>Donderdag: <span>09:00-19:00</span></span>
-            </p>
-          </footer>
-        </footer>
+                    </span>
+                    <p>
+                        &nbsp;
+                    </p>
+                    <p>
+                        <span>Woensdag:<span><span>08:00-18:00</span></span>
+                        </span>
+                        <span>Donderdag: <span>09:00-19:00</span></span>
+                    </p>
+                </footer>
+            </footer>
 
-        <!-- footer copyright -->
-        <footer class="footer-copyright">
-          <footer class="footer-copyright-left">
-            Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
-          </footer>
-        </footer>
+            <!-- footer copyright -->
+            <footer class="footer-copyright">
+                <footer class="footer-copyright-left">
+                    Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+                </footer>
+            </footer>
     </div>
 </body>
 
