--- a/home.html
+++ b/home.html
@@ -22,12 +22,14 @@
             </header>
 
             <header class="header-right">
-                <class class="icons">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="fab fa-youtube"></i>
-                </class>
+                <header class="icons">
+                  <img src="assets/png/001-facebook.png" style="width: 40px; height: 40px;">
+                  <img src="assets/png/008-youtube.png" style="width: 40px; height: 40px;">
+                  <img src="assets/png/002-twitter.png" style="width: 40px; height: 40px;">
+                  <img src="assets/png/010-linkedin.png" style="width: 40px; height: 40px;">
+                  <img src="assets/png/011-instagram.png" style="width: 40px; height: 40px;">
+                   
+                </header>
             </header>
         </header>
         </header>
