--- a/home.html
+++ b/home.html
@@ -23,11 +23,10 @@
 
             <header class="header-right">
                 <header class="icons">
-                  <img src="assets/png/001-facebook.png" style="width: 40px; height: 40px;">
-                  <img src="assets/png/008-youtube.png" style="width: 40px; height: 40px;">
-                  <img src="assets/png/002-twitter.png" style="width: 40px; height: 40px;">
-                  <img src="assets/png/010-linkedin.png" style="width: 40px; height: 40px;">
-                  <img src="assets/png/011-instagram.png" style="width: 40px; height: 40px;">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-youtube"></i>
                    
                 </header>
             </header>
