--- a/home.html
+++ b/home.html
@@ -137,6 +137,7 @@
             <footer class="footer-distributed-position">
                 <!-- left side of footer 30% -->
                 <footer class="footer-left">
+                    <hr>
                     <h1>DE PRAKTIJK</h1>
                     <span>
             <p>Johan van Oldenbarneveltlaan 2<br>2582 NN Den Haag</p>
@@ -165,7 +166,7 @@
                 <!-- right side of footer 30% -->
                 <footer class="footer-right">
                     <h1>
-                        “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+                        <hr> “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
                     </h1>
                 </footer>
             </footer>
