--- a/home.html
+++ b/home.html
@@ -23,11 +23,11 @@
 
             <header class="header-right">
                 <header class="icons">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="fab fa-youtube"></i>
-                   
+                    <a href="https://www.facebook.com/kinderbalans"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com/kinderbalans"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/whornsveldkinderbalans/?locale=nl_NL"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+
                 </header>
             </header>
         </header>
