--- a/home.html
+++ b/home.html
@@ -1,190 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://kit.fontawesome.com/b57a0b7ac6.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b57a0b7ac6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header class="header-distributed">
-            <header class="header-left"></header>
+      <header class="header-distributed">
+        <header class="header-left"></header>
 
-            <header class="header-center">
-                <header class="header-logo">
-                    <img src="assets/images/kinder_balans_logo.jpg" alt="kinder_balans_logo" style="height: 150px; width: 280px;" />
-                </header>
-            </header>
-
-            <header class="header-right">
-                <header class="icons">
-                    <a href="https://www.facebook.com/kinderbalans"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com/kinderbalans"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/whornsveldkinderbalans/?locale=nl_NL"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
-
-                </header>
-            </header>
-        </header>
+        <header class="header-center">
+          <header class="header-logo">
+            <img
+              src="assets/images/kinder_balans_logo.jpg"
+              alt="kinder_balans_logo"
+              style="height: 150px; width: 280px;"
+            />
+          </header>
         </header>
 
-        <nav class="navigation">
-            <ul>
-                <li><a class="active" href="home.html">Home</a></li>
-                <li><a href="nieuws.html">Nieuws</a></li>
-                <li><a href="bowentherapie.html">Bowen Therapie</a></li>
-                <li><a href="klachten.html">Klachten</a></li>
-                <li><a href="overmij.html">Over Mij</a></li>
-                <li><a href="tarieven.html">Tarieven</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <!-- navigation -->
+        <header class="header-right"></header>
+      </header>
 
-        <section class="slider">
-            <img src="assets/images/placeholder.png" style="width: 100%;
-        height: 450px;" />
+      <nav class="navigation">
+        <ul>
+          <li><a class="active" href="home.html">Home</a></li>
+          <li><a href="nieuws.html">Nieuws</a></li>
+          <li><a href="bowentherapie.html">Bowen Therapie</a></li>
+          <li><a href="klachten.html">Klachten</a></li>
+          <li><a href="overmij.html">Over Mij</a></li>
+          <li><a href="tarieven.html">Tarieven</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- navigation -->
+
+      <section class="slider">
+        <img
+          src="assets/images/placeholder.png"
+          style="width: 100%;
+        height: 450px;"
+        />
+      </section>
+      <!-- slideshow -->
+
+      <section class="main-content">
+        <!-- main content -->
+        <section class="content-title">
+          <h1>Home</h1>
         </section>
-        <!-- slideshow -->
+        <section class="site-content">
+          <section class="home">
+            <p>
+              Bowen therapie voor baby’s en jonge kinderen – Den Haag
+            </p>
+            <p>
+              Heeft uw zoon of dochter (0-12 jaar) spanningsklachten, pijn of
+              vage lichamelijke klachten? Bij Kinderbalans is uw kind op een
+              fijne plek waar met de milde, kindvriendelijke Bowen therapie
+              spanning in het hoofd en lijf wordt behandeld. Kinderen komen bij
+              Kinderbalans met buikpijn, onrust in lijf of hoofd, hoofdpijn,
+              koliekpijn (baby’s), slaapproblemen en spanning in de nek,
+              schouders en rug.
+            </p>
+            <p>
+              De behandelingen worden door de meeste aanvullende verzekeringen
+              deels vergoed.
+            </p>
+            <p>
+              <img
+                src="assets/images/willemijn_hornsveld.jpg"
+                alt="willemijn_hornsveld"
+                style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 200px; height: 200px;"
+              />
+            </p>
+            <span>
+              Willemijn Hornsveld
+              <p class="none">Bowen therapeut,</p>
+            </span>
+          </section>
 
-        <section class="main-content">
-            <!-- main content -->
+          <section class="testimonial">
             <section class="content-title">
-                <h1>Home</h1>
+              <h1>Testimonial</h1>
             </section>
-            <section class="site-content">
-                <p>
-                    Bowen therapie voor baby’s en jonge kinderen – Den Haag
-                </p>
-                <p>
-                    Heeft je zoon of dochter (0-12 jr) spanningsklachten, pijn of vage lichamelijke klachten (ook wel psychosomatische klachten of SOLK genoemd)? Bij Kinderbalans is je kind op een fijne plek waar met de milde, kindvriendelijke Bowen therapie spanning in
-                    het hoofd en lijf wordt behandeld. Kinderen komen bij Kinderbalans met buikpijn, onrust in lijf of hoofd, hoofdpijn, koliekpijn (baby’s), slaapproblemen en spanning in de nek/schouders/rug.
-                </p>
-                <p>
-                    De behandelingen worden door de meeste aanvullende verzekeringen deels vergoed.
-                </p>
-                <p>
-                    <img src="assets/images/willemijn_hornsveld.jpg" alt="willemijn_hornsveld" style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;" />
-                </p>
-                <span>
-            Willemijn Hornsveld
-            <p class="none">Bowen therapeut,</p>
-          </span>
 
-                <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
-                <section class="testimonials">
-                    <section class="content-title">
-                        <h1>Testimonials</h1>
-                    </section>
-                    <div class="col">
-                        <div class="col-bg">
-                            <div class="col-picture">
-                                <img src="assets/images/anonymous.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
-                            </div>
-                            <div class="col-name">
-                                Aron Aron
-                                <div class="col-line">
-                                    <hr />
-                                </div>
-                                <div class="col-text">
-                                    Hallo ik ben Aron.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="col-bg">
-                            <div class="col-picture">
-                                <img src="assets/images/anonymous.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
-                            </div>
-                            <div class="col-name">
-                                Aron Aron
-                                <div class="col-line">
-                                    <hr />
-                                </div>
-                                <div class="col-text">
-                                    Hallo ik ben Aron.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-none">
-                        <div class="col-bg">
-                            <div class="col-picture">
-                                <img src="assets/images/anonymous.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
-                            </div>
-                            <div class="col-name">
-                                Aron Aron
-                                <div class="col-line">
-                                    <hr />
-                                </div>
-                                <div class="col-text">
-                                    Hallo ik ben Aron.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+            <section class="card">
+              <section class="avatar">
+                <img
+                  src="assets/images/anonymous.jpg"
+                  style="width: 100px; height: 100px; border-radius: 50%;"
+                />
+              </section>
+
+              <section class="name">Yunyi Xie</section>
+              <section class="item">
+                <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Perferendis quae doloribus sit
+                facilis esse nisi optio, reprehenderit cum facere totam alias
+                dolore magni est ipsa velit, libero dignissimos ipsum delectus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                non accusantium aut illo asperiores aliquam libero, nisi
+                deserunt quia distinctio deleniti vel. Nisi minima facere
+                sapiente magnam, consequatur quisquam necessitatibus.
+                <i class="fas fa-quote-right"></i>
+              </section>
             </section>
+
+            <section class="card-uno">
+              <section class="avatar">
+                <img
+                  src="assets/images/anonymous.jpg"
+                  style="width: 100px; height: 100px; border-radius: 50%;"
+                />
+              </section>
+              <section class="name">Aron Dosti</section>
+              <section class="item">
+                <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Perferendis quae doloribus sit
+                facilis esse nisi optio, reprehenderit cum facere totam alias
+                dolore magni est ipsa velit, libero dignissimos ipsum delectus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                non accusantium aut illo asperiores aliquam libero, nisi
+                deserunt quia distinctio deleniti vel. Nisi minima facere
+                sapiente magnam, consequatur quisquam necessitatibus.
+                <i class="fas fa-quote-right"></i>
+              </section>
+            </section>
+          </section>
         </section>
+      </section>
 
-        <!-- footer -->
-        <footer class="footer-distributed">
-            <footer class="footer-distributed-position">
-                <!-- left side of footer 30% -->
-                <footer class="footer-left">
-                    <hr>
-                    <h1>DE PRAKTIJK</h1>
-                    <span>
-            <p>Johan van Oldenbarneveltlaan 2<br>2582 NN Den Haag</p>
-            <p>Telefoon: 070-2202009</p>
-            <p>E-mail: info@kinderbalans.nl</p><br>
-            <p>Bel of mail vrijblijvend voor meer informatie!</p><br>
-            <span>De openingstijden zijn:</span>
-                    </span>
-                    <p>
-                        <span>Woensdag:<span><span>08:00-18:00</span></span>
-                        </span>
-                        <span>Donderdag: <span>09:00-19:00</span></span>
-                    </p>
-
-                </footer>
-
-                <!-- center side of footer 40% -->
-                <footer class="footer-center">
-                    <h1>LINKS</h1>
-                    <ul>
-                        <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
-                        <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
-                        <li><a href="https://vbag.nl/">VBAG</a></li>
-                    </ul>
-                </footer>
-                <!-- right side of footer 30% -->
-                <footer class="footer-right">
-                    <h1>
-                        <hr> “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-                    </h1>
-                </footer>
+      <!-- footer -->
+      <footer class="footer-distributed">
+        <footer class="footer-distributed-position">
+          <footer class="footer-left">
+            <footer class="company-logo"></footer>
+            <footer class="company-slogan">
+              <p>
+                “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+              </p>
             </footer>
 
-            <!-- footer copyright -->
-            <footer class="footer-copyright">
-                <footer class="footer-copyright-left">
-                    Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
-                </footer>
+            <footer class="social-media">
+              <ul>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul>
             </footer>
+          </footer>
+
+          <footer class="footer-center">
+            <footer class="praktijk-title">
+              <p>De Praktijk</p>
+            </footer>
+            <footer class="praktijk-adres">
+              <p>
+                Johan van Oldenbarneveltlaan 2
+                <br />
+                2582 NN Den Haag
+              </p>
+            </footer>
+            <footer class="openingstijden-title">
+              <p>Openingstijden</p>
+            </footer>
+            <footer class="openingstijden">
+              <p>
+                Woensdag: <span>08:00-18:00</span>
+                <br />
+                Donderdag: 09:00-19:00
+              </p>
+            </footer>
+          </footer>
+
+          <footer class="footer-right">
+            <footer class="contact-title">
+              <p>Contact</p>
+            </footer>
+            <footer class="contact-information">
+              <p>
+                Telefoon: 070-2202009
+                <br />
+                Email:
+                <a href="mailto:info@kinderbalans.nl">info@kinderbalans.nl</a>
+              </p>
+            </footer>
+
+            <footer class="links-title">
+              <p>Links</p>
+            </footer>
+            <footer class="links">
+              <ul>
+                <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
+                <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
+                <li><a href="https://vbag.nl/">VBAG</a></li>
+              </ul>
+            </footer>
+          </footer>
+        </footer>
+
+        <!-- footer copyright -->
+        <footer class="footer-copyright">
+          <footer class="footer-copyright-left">
+            Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+          </footer>
+        </footer>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
-
-<!-- search bar in navigation
-icons in footer
-footer re design
-add: openings tijden.
-remove: links. -->
