--- a/nieuws.html
+++ b/nieuws.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script
+      src="https://kit.fontawesome.com/b57a0b7ac6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>BOWEN THERAPIE - Kinderbalans</title>
   </head>
@@ -26,19 +26,7 @@
           </header>
         </header>
 
-        <header class="header-right">
-          <header class="header-icons">
-            <i class="fa fa-facebook-square"></i>
-            <i class="fa fa-twitter-square"></i>
-            <i class="fa fa-linkedin-square"></i>
-            <i class="fa fa-youtube-square"></i>
-            <i class="fa fa-phone-square"></i>
-            <header class="header-search">
-              <!-- w.i.p -->
-              search
-            </header>
-          </header>
-        </header>
+        <header class="header-right"></header>
       </header>
 
       <nav class="navigation">
@@ -64,41 +52,89 @@
           <!-- insert nieuws -->
         </section>
       </section>
+
+      <!-- footer -->
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
           <footer class="footer-left">
-            <h1>
-              “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-            </h1>
+            <footer class="company-logo"></footer>
+            <footer class="company-slogan">
+              <p>
+                “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+              </p>
+            </footer>
+
+            <footer class="social-media">
+              <ul>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul>
+            </footer>
           </footer>
+
           <footer class="footer-center">
-            <h1>LINKS</h1>
-            <ul>
-              <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
-              <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
-              <li><a href="https://vbag.nl/">VBAG</a></li>
-            </ul>
+            <footer class="praktijk-title">
+              <p>De Praktijk</p>
+            </footer>
+            <footer class="praktijk-adres">
+              <p>
+                Johan van Oldenbarneveltlaan 2
+                <br />
+                2582 NN Den Haag
+              </p>
+            </footer>
+            <footer class="openingstijden-title">
+              <p>Openingstijden</p>
+            </footer>
+            <footer class="openingstijden">
+              <p>
+                Woensdag: <span>08:00-18:00</span>
+                <br />
+                Donderdag: 09:00-19:00
+              </p>
+            </footer>
           </footer>
+
           <footer class="footer-right">
-            <h1>DE PRAKTIJK</h1>
-            <span>
-              <p>Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag</p>
-              <p>Telefoon: 070-2202009</p>
-              <p>E-mail: info@kinderbalans.nl</p>
-              <p>Bel of mail vrijblijvend voor meer informatie!</p>
-              <span>De openingstijden zijn:</span>
-            </span>
-            <p>
-              &nbsp;
-            </p>
-            <p>
-              <span
-                >Woensdag:<span><span>08:00-18:00</span></span></span
-              >
-              <span>Donderdag: <span>09:00-19:00</span></span>
-            </p>
+            <footer class="contact-title">
+              <p>Contact</p>
+            </footer>
+            <footer class="contact-information">
+              <p>
+                Telefoon: 070-2202009
+                <br />
+                Email:
+                <a href="mailto:info@kinderbalans.nl">info@kinderbalans.nl</a>
+              </p>
+            </footer>
+
+            <footer class="links-title">
+              <p>Links</p>
+            </footer>
+            <footer class="links">
+              <ul>
+                <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
+                <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
+                <li><a href="https://vbag.nl/">VBAG</a></li>
+              </ul>
+            </footer>
           </footer>
         </footer>
+
+        <!-- footer copyright -->
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
