--- a/home.html
+++ b/home.html
@@ -109,8 +109,7 @@
                 dolore magni est ipsa velit, libero dignissimos ipsum delectus.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
                 non accusantium aut illo asperiores aliquam libero, nisi
-                deserunt quia distinctio deleniti vel. Nisi minima facere
-                sapiente magnam, consequatur quisquam necessitatibus.
+                deserunt quia distinctio deleniti vel.
                 <i class="fas fa-quote-right"></i>
               </section>
             </section>
@@ -130,8 +129,7 @@
                 dolore magni est ipsa velit, libero dignissimos ipsum delectus.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
                 non accusantium aut illo asperiores aliquam libero, nisi
-                deserunt quia distinctio deleniti vel. Nisi minima facere
-                sapiente magnam, consequatur quisquam necessitatibus.
+                deserunt quia distinctio deleniti vel.
                 <i class="fas fa-quote-right"></i>
               </section>
             </section>
