--- a/bowentherapie.html
+++ b/bowentherapie.html
@@ -50,61 +50,60 @@
           <h1>Bowen Therapie</h1>
         </section>
         <section class="site-content">
-          <p>
-            Bowen therapie Den Haag
-          </p>
-          <p>
-            Kinderbalans helpt kinderen en jongeren die door spanning in het
-            lijf en hoofd worden belemmerd in hun ontwikkeling. Emotionele
-            spanning uit zich vaak in lichamelijke klachten en andersom zijn
-            lichamelijke klachten van invloed op het mentale welbevinden. Lijf
-            en hoofd zijn niet als aparte delen te zien maar vormen samen het
-            kind en zijn dan ook niet los van elkaar te benaderen als er
-            klachten zijn.
-          </p>
-          <p>
-            Bowen is een milde, kindvriendelijke, effectieve lichaamsbehandeling
-            voor pijn en spanningsklachten. De therapeut maakt korte
-            rolbewegingen met de duimen en vingers over spieren, pezen en fascie
-            (bindweefsel), op specifieke plekken van het lichaam. De impuls van
-            deze bewegingen veroorzaakt een diepe helende werking waardoor je
-            lichaam en geest in balans komen en spanning vermindert/verdwijnt.
-          </p>
-          <p>
-            Bowen Therapie is vernoemd naar de Australiër Thomas Bowen
-            (1916-1982) die de gave had om mensen met pijnklachten te helpen.
-            Hij ontdekte dat hij van een afstand kon zien waar de blokkade in
-            een lichaam zich bevond. Intuïtief startte hij met het maken van
-            kleine rolbewegingen op het lichaam van de patiënt, met goede tot
-            opzienbarende resultaten. Samen met een aantal leerlingen
-            ontwikkelde hij zijn techniek tot een natuurlijke, milde,
-            ontspannende maar heel effectieve manuele therapie. Inmiddels is de
-            therapie wereldwijd vertegenwoordigd en werken opleiders en
-            behandelaren nog dagelijks aan verfijning van deze bijzondere
-            methode.
-          </p>
-          <p>
-            Bowen is een holistische therapie: enerzijds omdat de therapeut de
-            cliënt als geheel bekijkt in het therapeutische proces en anderzijds
-            omdat ononderbroken door het gehele lichaam de fascie aanwezig is
-            die alle structuren met elkaar verbindt. Dat maakt het onmogelijk om
-            bij een behandeling een enkele plek in het lichaam te bereiken en
-            geen invloed uit te oefenen op de mens als geheel.
-          </p>
-          <p>
-            Bowen werkt zacht en subtiel waardoor het geschikt is voor iedereen,
-            ongeacht de klacht, de leeftijd en de conditie.
-          </p>
-
-          <p>
-            Tijdens de behandeling krijgt je lichaam pauzes van enkele minuten.
-            Zo krijgt het lichaam de tijd en ruimte om de impulsen te verwerken.
-          </p>
-
-          <p>
-            Omdat de bewegingen zacht en pijnloos zijn, is de techniek geschikt
-            voor iedereen, ook voor baby’s.
-          </p>
+          <section class="bowen-therapie">
+            <p>
+              Kinderbalans helpt kinderen en jongeren die door spanning in het
+              lijf en hoofd worden belemmerd in hun ontwikkeling. Emotionele
+              spanning uit zich vaak in lichamelijke klachten en andersom zijn
+              lichamelijke klachten van invloed op het mentale welbevinden. Lijf
+              en hoofd zijn niet als aparte delen te zien maar vormen samen het
+              kind en zijn dan ook niet los van elkaar te benaderen als er
+              klachten zijn.
+            </p>
+            <p>
+              Bowen is een milde, kindvriendelijke, effectieve
+              lichaamsbehandeling voor pijn en spanningsklachten. De therapeut
+              maakt korte rolbewegingen met de duimen en vingers over spieren,
+              pezen en fascie (bindweefsel), op specifieke plekken van het
+              lichaam. De impuls van deze bewegingen veroorzaakt een diepe
+              helende werking waardoor je lichaam en geest in balans komen en
+              spanning vermindert/verdwijnt.
+            </p>
+            <p>
+              Bowen Therapie is vernoemd naar de Australiër Thomas Bowen
+              (1916-1982) die de gave had om mensen met pijnklachten te helpen.
+              Hij ontdekte dat hij van een afstand kon zien waar de blokkade in
+              een lichaam zich bevond. Intuïtief startte hij met het maken van
+              kleine rolbewegingen op het lichaam van de patiënt, met goede tot
+              opzienbarende resultaten. Samen met een aantal leerlingen
+              ontwikkelde hij zijn techniek tot een natuurlijke, milde,
+              ontspannende maar heel effectieve manuele therapie. Inmiddels is
+              de therapie wereldwijd vertegenwoordigd en werken opleiders en
+              behandelaren nog dagelijks aan verfijning van deze bijzondere
+              methode.
+            </p>
+            <p>
+              Bowen is een holistische therapie: enerzijds omdat de therapeut de
+              cliënt als geheel bekijkt in het therapeutische proces en
+              anderzijds omdat ononderbroken door het gehele lichaam de fascie
+              aanwezig is die alle structuren met elkaar verbindt. Dat maakt het
+              onmogelijk om bij een behandeling een enkele plek in het lichaam
+              te bereiken en geen invloed uit te oefenen op de mens als geheel.
+            </p>
+            <p>
+              Bowen werkt zacht en subtiel waardoor het geschikt is voor
+              iedereen, ongeacht de klacht, de leeftijd en de conditie.
+            </p>
+            <p>
+              Tijdens de behandeling krijgt je lichaam pauzes van enkele
+              minuten. Zo krijgt het lichaam de tijd en ruimte om de impulsen te
+              verwerken.
+            </p>
+            <p>
+              Omdat de bewegingen zacht en pijnloos zijn, is de techniek
+              geschikt voor iedereen, ook voor baby’s.
+            </p>
+          </section>
         </section>
       </section>
 
