--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 
       <section class="slider">
         <img
-          src="assets/images/placeholder.png"
+          src="assets/slideshow/slaap-baby-2-1140x450.jpg"
           style="width: 100%;
         height: 450px;"
         />
