--- a/overmij.html
+++ b/overmij.html
@@ -48,45 +48,44 @@
           <h1>Over Mij</h1>
         </section>
         <section class="site-content">
-          <p>
-            Over mij
-          </p>
-          <p>
-            Ik heet Willemijn Hornsveld. Ik ben kindertherapeut in Den Haag
-            (Statenkwartier).
-          </p>
-          <p>
-            Ieder kind verdient het om ontspannen door het leven te gaan. Daarom
-            heeft ieder kind dat last heeft van spanningsklachten, recht op
-            hulp. Die hulp bied ik graag. Een gezonde balans in een kind is de
-            voorwaarde om relaxt en blij te kunnen leven, spelen en leren en te
-            kunnen opgroeien tot een evenwichtige, gezonde volwassene.
-          </p>
-          <p class="overmij">
-            <img
-              src="assets/images/overmij.jpg"
-              alt="overmij"
-              style="height: 200px; width: 200px;"
-            />
-          </p>
-          <p>
-            Van jongs af aan ben ik nieuwsgierig naar het gedrag van mensen en
-            de omstandigheden die gedrag beïnvloeden. Na mijn middelbare school
-            studeerde ik kinder- en jeugdpsychologie. Later volgde ik de
-            opleiding tot Bowen therapeut en volgde ik een cursus babymassage.
-          </p>
-          <p>
-            Sinds 2012 heb ik een eigen praktijk voor kindertherapie:
-            Kinderbalans. Daarnaast werk ik als kinder- en jeugdpsycholoog in
-            een GGZ-instelling. Eens per maand leid ik, als ervaringsdeskundige,
-            in het Juliana Kinderziekenhuis een gespreksgroep voor ouders wiens
-            baby in de couveuse ligt. Mijn eigen dochter werd te vroeg geboren
-            en heeft daardoor lange tijd in de couveuse gelegen.
-          </p>
-          <p>
-            Kinderbalans volgt de Wet op de Meldcode Huiselijk Geweld en
-            Kindermishandeling
-          </p>
+          <section class="over-mij">
+            <p>
+              Ik heet Willemijn Hornsveld. Ik ben kindertherapeut in Den Haag
+              (Statenkwartier).
+            </p>
+            <p>
+              Ieder kind verdient het om ontspannen door het leven te gaan.
+              Daarom heeft ieder kind dat last heeft van spanningsklachten,
+              recht op hulp. Die hulp bied ik graag. Een gezonde balans in een
+              kind is de voorwaarde om relaxt en blij te kunnen leven, spelen en
+              leren en te kunnen opgroeien tot een evenwichtige, gezonde
+              volwassene. Kinderbalans volgt de Wet op de Meldcode Huiselijk
+              Geweld en Kindermishandeling
+            </p>
+            <p class="overmij">
+              <img
+                src="assets/images/overmij.jpg"
+                alt="overmij"
+                style="height: 200px; width: 200px;"
+              />
+            </p>
+            <p>
+              Van jongs af aan ben ik nieuwsgierig naar het gedrag van mensen en
+              de omstandigheden die gedrag beïnvloeden. Na mijn middelbare
+              school studeerde ik kinder- en jeugdpsychologie. Later volgde ik
+              de opleiding tot Bowen therapeut en volgde ik een cursus
+              babymassage.
+            </p>
+            <p>
+              Sinds 2012 heb ik een eigen praktijk voor kindertherapie:
+              Kinderbalans. Daarnaast werk ik als kinder- en jeugdpsycholoog in
+              een GGZ-instelling. Eens per maand leid ik, als
+              ervaringsdeskundige, in het Juliana Kinderziekenhuis een
+              gespreksgroep voor ouders wiens baby in de couveuse ligt. Mijn
+              eigen dochter werd te vroeg geboren en heeft daardoor lange tijd
+              in de couveuse gelegen.
+            </p>
+          </section>
         </section>
       </section>
 
