--- a/bowentherapie.html
+++ b/bowentherapie.html
@@ -111,7 +111,9 @@
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
           <footer class="footer-left">
-            <footer class="company-logo"></footer>
+            <footer class="company-logo">
+              Kinderbalans
+            </footer>
             <footer class="company-slogan">
               <p>
                 “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
