--- a/tarieven.html
+++ b/tarieven.html
@@ -49,28 +49,30 @@
           <h1>Tarieven</h1>
         </section>
         <section class="site-content">
-          <p>
-            Beste cliënten, ik heb besloten om vanaf 1 januari dit jaar niet
-            meer aangesloten te zijn bij een beroepsvereniging. Dit als gevolg
-            van de door zorgverzekeraars opgelegde eisen aan complementair
-            therapeuten, die vooral in het belang van de zorgverzekeraar zijn.
-            Ik werk voor de cliënt. Mijn behandelingen worden nu niet meer deels
-            vergoed; daar heb ik mijn prijs aan aangepast.
-          </p>
-          <p>
-            Prijs per consult:
-          </p>
+          <section class="tarieven">
+            <p>
+              Beste cliënten, ik heb besloten om vanaf 1 januari dit jaar niet
+              meer aangesloten te zijn bij een beroepsvereniging. Dit als gevolg
+              van de door zorgverzekeraars opgelegde eisen aan complementair
+              therapeuten, die vooral in het belang van de zorgverzekeraar zijn.
+              Ik werk voor de cliënt. Mijn behandelingen worden nu niet meer
+              deels vergoed; daar heb ik mijn prijs aan aangepast.
+            </p>
+            <p>
+              Prijs per consult:
+            </p>
 
-          <ul>
-            <li>0 t/m 3-jarigen: € 30,- (30 minuten)</li>
-            <li>4 jaar en ouder: € 40,- (45 minuten)</li>
-          </ul>
+            <ul>
+              <li>0 t/m 3-jarigen: € 30,- (30 minuten)</li>
+              <li>4 jaar en ouder: € 40,- (45 minuten)</li>
+            </ul>
 
-          <p>
-            Een afspraak annuleren kan kosteloos als je dat minimaal 48 uur
-            ervoor doet. Bel/mail je later of niet, dan breng ik € 25,- in
-            rekening voor de gereserveerde tijd.
-          </p>
+            <p>
+              Een afspraak annuleren kan kosteloos als je dat minimaal 48 uur
+              ervoor doet. Bel/mail je later of niet, dan breng ik € 25,- in
+              rekening voor de gereserveerde tijd.
+            </p>
+          </section>
         </section>
       </section>
 
