--- a/nieuws.html
+++ b/nieuws.html
@@ -48,8 +48,100 @@
           <h1>Nieuws</h1>
         </section>
         <section class="site-content">
-          nieuws etc.
-          <!-- insert nieuws -->
+          <section class="nieuws">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium earum pariatur temporibus eius vero commodi expedita,
+              delectus laboriosam, id similique quibusdam sit culpa recusandae
+              labore esse ad quos dolor accusantium? Lorem ipsum dolor sit, amet
+              consectetur adipisicing elit. Vero facilis, mollitia pariatur ut
+              nemo alias labore eligendi itaque temporibus exercitationem
+              architecto cupiditate porro reprehenderit quisquam, cumque dolore
+              sint! Expedita, facilis. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Consectetur unde dolorum aliquam, eum quaerat
+              praesentium obcaecati. Laboriosam ratione deleniti ut quos iure,
+              non doloremque similique maxime quia, repellat ab voluptatum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quas
+              voluptate alias perspiciatis fuga molestias asperiores adipisci
+              doloribus ut possimus assumenda excepturi aliquid vero a corporis
+              repellat facilis, ullam tenetur!
+            </p>
+          </section>
+        </section>
+
+        <section class="content-title">
+          <h1>Nieuws</h1>
+        </section>
+        <section class="site-content">
+          <section class="nieuws">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium earum pariatur temporibus eius vero commodi expedita,
+              delectus laboriosam, id similique quibusdam sit culpa recusandae
+              labore esse ad quos dolor accusantium? Lorem ipsum dolor sit, amet
+              consectetur adipisicing elit. Vero facilis, mollitia pariatur ut
+              nemo alias labore eligendi itaque temporibus exercitationem
+              architecto cupiditate porro reprehenderit quisquam, cumque dolore
+              sint! Expedita, facilis. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Consectetur unde dolorum aliquam, eum quaerat
+              praesentium obcaecati. Laboriosam ratione deleniti ut quos iure,
+              non doloremque similique maxime quia, repellat ab voluptatum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quas
+              voluptate alias perspiciatis fuga molestias asperiores adipisci
+              doloribus ut possimus assumenda excepturi aliquid vero a corporis
+              repellat facilis, ullam tenetur!
+            </p>
+          </section>
+        </section>
+
+        <section class="content-title">
+          <h1>Nieuws</h1>
+        </section>
+        <section class="site-content">
+          <section class="nieuws">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium earum pariatur temporibus eius vero commodi expedita,
+              delectus laboriosam, id similique quibusdam sit culpa recusandae
+              labore esse ad quos dolor accusantium? Lorem ipsum dolor sit, amet
+              consectetur adipisicing elit. Vero facilis, mollitia pariatur ut
+              nemo alias labore eligendi itaque temporibus exercitationem
+              architecto cupiditate porro reprehenderit quisquam, cumque dolore
+              sint! Expedita, facilis. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Consectetur unde dolorum aliquam, eum quaerat
+              praesentium obcaecati. Laboriosam ratione deleniti ut quos iure,
+              non doloremque similique maxime quia, repellat ab voluptatum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quas
+              voluptate alias perspiciatis fuga molestias asperiores adipisci
+              doloribus ut possimus assumenda excepturi aliquid vero a corporis
+              repellat facilis, ullam tenetur!
+            </p>
+          </section>
+        </section>
+
+        <section class="content-title">
+          <h1>Nieuws</h1>
+        </section>
+        <section class="site-content">
+          <section class="nieuws">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium earum pariatur temporibus eius vero commodi expedita,
+              delectus laboriosam, id similique quibusdam sit culpa recusandae
+              labore esse ad quos dolor accusantium? Lorem ipsum dolor sit, amet
+              consectetur adipisicing elit. Vero facilis, mollitia pariatur ut
+              nemo alias labore eligendi itaque temporibus exercitationem
+              architecto cupiditate porro reprehenderit quisquam, cumque dolore
+              sint! Expedita, facilis. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Consectetur unde dolorum aliquam, eum quaerat
+              praesentium obcaecati. Laboriosam ratione deleniti ut quos iure,
+              non doloremque similique maxime quia, repellat ab voluptatum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quas
+              voluptate alias perspiciatis fuga molestias asperiores adipisci
+              doloribus ut possimus assumenda excepturi aliquid vero a corporis
+              repellat facilis, ullam tenetur!
+            </p>
+          </section>
         </section>
       </section>
 
