--- a/klachten.html
+++ b/klachten.html
@@ -48,32 +48,27 @@
           <h1>Klachten</h1>
         </section>
         <section class="site-content">
-          <p>
-            Kinderbalans kan je helpen bij diverse klachten zoals:
-          </p>
-          <ul>
-            <li>AD(H)D</li>
-            <li>Angst</li>
-            <li>Buikpijn</li>
-            <li>Groeipijn</li>
-            <li>Hoofdpijn</li>
-            <li>Koliekpijn bij baby’s</li>
-            <li>Nek- en schouderklachten</li>
-            <li>Onrust</li>
-            <li>Rugpijn</li>
-            <li>Slaapproblemen</li>
-          </ul>
-          <p>
-            Als je twijfelt of ik je kind kan helpen, neem dan vrijblijvend
-            contact met me op voor advies.
-          </p>
-          <p class="klachten">
-            <img
-              src="assets/images/klachten.jpg"
-              alt="klachten"
-              style="width: 300px; height: 200px; float: right;"
-            />
-          </p>
+          <section class="klachten">
+            <p>
+              Kinderbalans kan je helpen bij diverse klachten zoals:
+            </p>
+            <ul>
+              <li>AD(H)D</li>
+              <li>Angst</li>
+              <li>Buikpijn</li>
+              <li>Groeipijn</li>
+              <li>Hoofdpijn</li>
+              <li>Koliekpijn bij baby’s</li>
+              <li>Nek- en schouderklachten</li>
+              <li>Onrust</li>
+              <li>Rugpijn</li>
+              <li>Slaapproblemen</li>
+            </ul>
+            <p>
+              Als je twijfelt of ik je kind kan helpen, neem dan vrijblijvend
+              contact met me op voor advies.
+            </p>
+          </section>
         </section>
       </section>
 
