--- a/overmij.html
+++ b/overmij.html
@@ -62,7 +62,7 @@
               volwassene. Kinderbalans volgt de Wet op de Meldcode Huiselijk
               Geweld en Kindermishandeling
             </p>
-            <p class="overmij">
+            <p class="foto">
               <img
                 src="assets/images/overmij.jpg"
                 alt="overmij"
