--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@
                             <input type="submit" value="Submit">
                         </form>
                     </class>
+                    <!-- Contact form -->
                 </p>
                 <p style="margin-bottom: 50px;">
                     Klik hieronder voor de Meldcode Kindermishandeling en de privacy statement van Kinderbalans:
