--- a/contact.html
+++ b/contact.html
@@ -79,8 +79,8 @@
                             <input type="email" id="lname" name="Email" placeholder="Uw email..">
                             </select>
                             <br>
-                            <label for="subject">Subject</label>
-                            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                            <label for="subject">Onderwerp</label>
+                            <textarea id="subject" name="subject" placeholder="Uw vraag/onderwerp.." style="height:200px"></textarea>
 
                             <input type="submit" value="Submit">
                         </form>
