--- a/home.html
+++ b/home.html
@@ -224,6 +224,9 @@
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+            <p style="text-align: right; margin-top: -20px;">
+              KvK nummer: 54023912
+            </p>
           </footer>
         </footer>
       </footer>
