--- a/nieuws.html
+++ b/nieuws.html
@@ -45,7 +45,7 @@
       <section class="main-content">
         <!-- main content -->
         <section class="content-title">
-          <h1>Nieuws</h1>
+          <h1>Nieuws 31 december 2004</h1>
         </section>
         <section class="site-content">
           <section class="nieuws">
@@ -70,7 +70,7 @@
         </section>
 
         <section class="content-title">
-          <h1>Nieuws</h1>
+          <h1>Nieuws 4 februari 2009</h1>
         </section>
         <section class="site-content">
           <section class="nieuws">
@@ -95,7 +95,7 @@
         </section>
 
         <section class="content-title">
-          <h1>Nieuws</h1>
+          <h1>Nieuws 19 januari 2002</h1>
         </section>
         <section class="site-content">
           <section class="nieuws">
@@ -120,7 +120,32 @@
         </section>
 
         <section class="content-title">
-          <h1>Nieuws</h1>
+          <h1>Nieuws 18 maart 2017</h1>
+        </section>
+        <section class="site-content">
+          <section class="nieuws">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium earum pariatur temporibus eius vero commodi expedita,
+              delectus laboriosam, id similique quibusdam sit culpa recusandae
+              labore esse ad quos dolor accusantium? Lorem ipsum dolor sit, amet
+              consectetur adipisicing elit. Vero facilis, mollitia pariatur ut
+              nemo alias labore eligendi itaque temporibus exercitationem
+              architecto cupiditate porro reprehenderit quisquam, cumque dolore
+              sint! Expedita, facilis. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Consectetur unde dolorum aliquam, eum quaerat
+              praesentium obcaecati. Laboriosam ratione deleniti ut quos iure,
+              non doloremque similique maxime quia, repellat ab voluptatum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quas
+              voluptate alias perspiciatis fuga molestias asperiores adipisci
+              doloribus ut possimus assumenda excepturi aliquid vero a corporis
+              repellat facilis, ullam tenetur!
+            </p>
+          </section>
+        </section>
+
+        <section class="content-title">
+          <h1>Nieuws 21 maart 2005</h1>
         </section>
         <section class="site-content">
           <section class="nieuws">
