--- a/home.html
+++ b/home.html
@@ -224,7 +224,7 @@
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
-            <p style="text-align: right; margin-top: -20px;">
+            <p class="footer-copyright-right">
               KvK nummer: 54023912
             </p>
           </footer>
