--- a/klachten.html
+++ b/klachten.html
@@ -49,25 +49,7 @@
         </section>
         <section class="site-content">
           <section class="klachten">
-            <p>
-              Kinderbalans kan je helpen bij diverse klachten zoals:
-            </p>
-            <ul>
-              <li>AD(H)D</li>
-              <li>Angst</li>
-              <li>Buikpijn</li>
-              <li>Groeipijn</li>
-              <li>Hoofdpijn</li>
-              <li>Koliekpijn bij baby’s</li>
-              <li>Nek- en schouderklachten</li>
-              <li>Onrust</li>
-              <li>Rugpijn</li>
-              <li>Slaapproblemen</li>
-            </ul>
-            <p>
-              Als je twijfelt of ik je kind kan helpen, neem dan vrijblijvend
-              contact met me op voor advies.
-            </p>
+            
           </section>
         </section>
       </section>
@@ -159,7 +141,7 @@
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
-            <p style="text-align: right; margin-top: -20px;">
+            <p class="footer-copyright-right">
               KvK nummer: 54023912
             </p>
           </footer>
