--- a/tarieven.html
+++ b/tarieven.html
@@ -163,6 +163,9 @@
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
             Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+            <p class="footer-copyright-right">
+              KvK nummer: 54023912
+            </p>
           </footer>
         </footer>
       </footer>
