--- a/klachten.html
+++ b/klachten.html
@@ -49,7 +49,26 @@
         </section>
         <section class="site-content">
           <section class="klachten">
-            
+            <p>
+              Heeft u klachten? Kinderbalans kunt uw helpen bij diverse klachten
+              zoals:
+            </p>
+            <ul>
+              <li><a href="#">Buikpijn</a></li>
+              <li><a href="#">Onrust</a></li>
+              <li><a href="#">Hoofdpijn</a></li>
+              <li><a href="#">Nek- en schouderklachten</a></li>
+              <li><a href="#">Slaapproblemen</a></li>
+              <li><a href="#">Angst</a></li>
+              <li><a href="#">AD(H)D</a></li>
+              <li><a href="#">Rugpijn</a></li>
+              <li><a href="#">Koliekpijn bij baby’s</a></li>
+              <li><a href="#">Groeipijn</a></li>
+            </ul>
+            <p>
+              Als uw twijfelt of ik uw kind kan helpen, neem dan vrijblijvend
+              contact met mij op voor advies.
+            </p>
           </section>
         </section>
       </section>
