--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
                                 <input type="submit" value="Submit">
                             </form>
-                        </class> -->
+                        </class>
                         <!-- end contact form -->
                     </p>
                 </section>
@@ -78,7 +78,7 @@
                         De praktijk is geopend op
                     </p>
 
-                    <p>
+                    <p style="margin-bottom: 20px;">
                         <ul>
                             <li>Woensdag: 08:00-18:00</li>
                             <li>Donderdag: 09:00-19:00</li>
