--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                                 </select>
                                 <br>
                                 <label for="subject">Onderwerp</label>
-                                <textarea id="subject" name="subject" placeholder="Uw vraag/onderwerp.." style="height:200px; max-height: 200px;"></textarea>
+                                <textarea id="subject" name="subject" placeholder="Uw vraag/onderwerp.." style="height:200px; max-height: 200px; min-height: 200px;"></textarea>
 
                                 <input type="submit" value="Submit">
                             </form>
