--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         Adres: Johan van Oldenbarneveltlaan 2<br /> 2582 NN Den Haag (Statenkwartier)
                     </p>
                     <p>
-                        De praktijk is geopend op
+                        De praktijk is geopend op:
                     </p>
 
                     <p style="margin-bottom: 20px;">
