--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <p style="margin-bottom: 50px;">
                         <class class="contactform">
                             <!-- Contact form -->
-                            <form action="/action_page.php">
+                            <form action="mailto:info@kinderbalans.nl">
                                 <label for="fname">Voornaam</label>
                                 <input type="text" id="fname" name="Voornaam" required placeholder="Uw voornaam..">
                                 <br>
@@ -73,6 +73,9 @@
                     </p>
                     <p>
                         Adres: Johan van Oldenbarneveltlaan 2<br /> 2582 NN Den Haag (Statenkwartier)
+                    </p>
+                    <p>
+                        Telefoon: 06-82070455
                     </p>
                     <p>
                         De praktijk is geopend op:
